Copy css folder in dist directory

--- a/src/partials/head.ejs
+++ b/src/partials/head.ejs
@@ -3,8 +3,4 @@
 
 <!-- CSS -->
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-<style>
-	body {
-		padding-top: 50px;
-	}
-</style>
+<link rel="stylesheet" href="/css/app.css">
